--- a/Marian.vcxproj.filters
+++ b/Marian.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="floorO.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="coins.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -58,5 +61,13 @@
     <ClInclude Include="floorO.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="coins.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="data\save.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
